fix collapse backward

--- a/src/assets/css/components/_collapse.scss
+++ b/src/assets/css/components/_collapse.scss
@@ -6,12 +6,14 @@
     user-select: none;
     cursor: default;
     max-height: 0;
+    will-change: max-heigth;
     overflow: hidden;
-    display: none;
+    display: block;
     transition: $collapse-transition-height;
 
     &_visible {
       display: block;
+      opacity: 0;
     }
 
     &_active {
