--- a/src/assets/css/components/sections/steps/_calcualtor.scss
+++ b/src/assets/css/components/sections/steps/_calcualtor.scss
@@ -81,7 +81,8 @@
   }
 
   &__row {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto;
     align-items: flex-start;
     justify-content: space-between;
 
@@ -346,17 +347,20 @@
 
   &__multiplier {
     @include flex-row;
+    justify-content: space-between;
     border-radius: $border-radius-xs;
     border: 1px solid $dim-gray;
     margin-bottom: $spacer;
     width: fit-content;
+    box-sizing: border-box;
 
     @include tablet {
       margin-right: $spacer * 4;
       margin-bottom: 0;
       padding: 2px 10px;
-      width: 78px;
+      min-width: 93px;
       height: 32px;
+      padding: 2px 11px;
     }
   }
 
@@ -380,8 +384,10 @@
   }
 
   &__input {
-    max-width: 3ch;
-    height: 31px;
+    width: 13px;
+    height: 21px;
+    pointer-events: none;
+    user-select: none;
     outline: none;
     border: none;
     text-align: center;
