--- a/src/assets/css/utils/_vars.scss
+++ b/src/assets/css/utils/_vars.scss
@@ -23,7 +23,8 @@ $spacer: 5px;
 $btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
   border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 $opacity-transition: opacity 0.3s ease-in-out;
-$collapse-transition: ease-in-out 0.4s, opacity ease-in-out 0.3s;
+$collapse-transition: cubic-bezier(0.25, 0.8, 0.5, 1) 0.4s,
+  opacity cubic-bezier(0.25, 0.8, 0.5, 1) 0.35s;
 $collapse-transition-height: max-height ease-in-out 0.4s,
   opacity ease-in-out 0.4s;
 
